# FingerChips_In_Python

./: American.py  Chinese.py  Indian.py  Korean.py  LICENSE  README.md  french.py  indian.py  pyproject.toml  setup.py
